Change Log for SUMI

[CVS]
20040811 Keith Oakley   designed the SUMI icon used for sumigetw
20040805 Jeff Connelly  new transport: aim, for Windows AOL Instant Messenger

0.7 (20040724) - Focus on getting things to work, cleanup for CVS
20040724 Jeff Connelly  archive now contains CVS files, so you can commit easier
20040723 Jeff Connelly  import to SourceForge CVS, committed
20040721 Jeff Connelly  public-key encryption (RSA) added but not yet complete
20040721 Jeff Connelly  pre-authenticated encryption now works,at least with AES

0.6 (20040720) - Rewriting of sumigetw.py GUI
      * better GUI, actually works, not dialog-based anymore, resizable
      * handshake timeouts after (default) 5 seconds, maxwait client
      * xchat transport fixed, requires xchat2, no patches needed
      * client-configuration in GUI
      * ICMP checksums implemented, so ICMP data channel mode now works
      * dchantype iX,Y => myport X*0x100+Y
      * first public (pre-alpha) release! http://sumi.sourceforge.net/
0.5 (20040407) - Enhancements
      * latency parameter replaced with bandwidth parameter in bps 
      * sumiserv acts more like iroffer, file database
      * length and filename transferred in auth packet, saves as file
      * transports as Python modules, importable 
        - standalone irclib
        - mIRC
        - xchat (with patch)
        - possibilities of others
      * sumigetw replaces wxfer;is a standalone GUI interface to sumiget module
      * addition of data channel transfer types, u, U, t, e 
      * config.py and sumiserv.cfg loadable configuration files, eval()'d
      * no "critical packet" in sumiserv, server sends continously but requires
        acks every window size seconds
      * docstrings for mostly all functions
      * applied a patch to use Winsock 2, raw sockets now work in Win32!
      * filename and length sent in auth packet
      * AES symmetric encryption
0.4 (20040117) - Reimplementation of sumiserv and sumiget in Python